# rma-kinetics-rs

./: .gitignore  Cargo.toml  README.md  flake.nix  mkdocs.yml  pyproject.toml  rust-toolchain.toml
.github/workflows/: docs-build.yml
crates/rma-kinetics/: Cargo.toml
crates/rma-kinetics-derive/src/: lib.rs
crates/rma-kinetics/src/: lib.rs  solve.rs
crates/rma-kinetics/src/models/: chemogenetic.rs  cno.rs  constitutive.rs  dox.rs  erasable.rs  mod.rs  oscillation.rs  tetoff.rs
crates/rma-kinetics/src/models/chemogenetic/: erasable.rs  mod.rs
crates/rma-kinetics/src/models/constitutive/: erasable.rs  inference.rs  mod.rs  stochastic.rs
crates/rma-kinetics/src/models/oscillation/: stochastic.rs
docs/: index.md
docs/app/: desktop.md  index.md
notebooks/: chemogenetic_fit_eval.py  chemogenetic_sensitivity.py  constitutive_erasable.py  constitutive_fit.py  constitutive_fit_eval.py  constitutive_sensitivity.py  sensitivity.py  temporal_resolution.py
notebooks/data/aav_rma_timecourse/CA1/: hdi.npy  parameter_fit_summary.csv  predicted_mean.npy  source.csv
notebooks/data/aav_rma_timecourse/CP/: hdi.npy  parameter_fit_summary.csv  predicted_mean.npy  source.csv
notebooks/data/aav_rma_timecourse/SN/: hdi.npy  parameter_fit_summary.csv  predicted_mean.npy  source.csv
notebooks/data/constitutive_ferma/hippocampus/: source.csv  source_raw.csv
notebooks/data/constitutive_ferma/midbrain/: source.csv
notebooks/data/constitutive_ferma/striatum/: source.csv
python/rma_kinetics/: __init__.py  __init__.pyi  _rma_kinetics.pyi  pymc.py  pymc.pyi  solvers.py
python/rma_kinetics/models/: __init__.py  __init__.pyi  chemogenetic.py  chemogenetic.pyi  cno.py  cno.pyi  dox.py  dox.pyi  oscillation.py  oscillation.pyi  tetoff.py
python/rma_kinetics/models/constitutive/: __init__.py  __init__.pyi  erasable.py  erasable.pyi
python/tests/: test_all.py  test_pymc_ops.py
