[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.1"
authors = ["Nicolas Buitrago <mail@nsbuitrago.xyz>"]
license = "MIT"
description = "RMA Kinetic Models"
repository = "https://github.com/nsbuitrago/rma-kinetics-rs"
homepage = "https://github.com/nsbuitrago/rma-kinetics-rs"
edition = "2024"

[workspace.dependencies]
differential-equations = "0.5.3"
pyo3 = "0.27.0"
numpy = "0.27.0"
thiserror = "2.0.17"
derive_builder = "0.20.2"
rand = "0.9.3"
rand_distr = "0.5.1"
serde = { version = "1.0.228", features = ["derive"] }
rma-kinetics = { version = "0.1.0", path = "crates/rma-kinetics" }
rma-kinetics-derive = { version = "0.1.0", path = "crates/rma-kinetics-derive" }
