[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[project]
name = "rma-kinetics"
description = "Kinetic models of synthetic serum markers."
license = { file = "LICENSE" }
readme = "README.md"
authors = [{ name = "Nicolas Buitrago", email = "mail@nsbuitrago.xyz" }]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "numpy>=2.2.6",
]
[project.optional-dependencies]
tests = [
    "pytest",
]
pymc = [
    "pymc>=5.25.1",
    "pytensor>=2.31.7",
]
[tool.maturin]
python-source = "python"
manifest-path = "crates/rma-kinetics/Cargo.toml"
module-name = "rma_kinetics._rma_kinetics"
features = ["py"]
profile = "release"
editable-profile = "dev"

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[dependency-groups]
tests = [
    "pytest>=9.0.3",
]
docs = [
    "mkdocs-material>=9.7.0",
    "mkdocstrings[python]>=0.29.1",
]
dev = [
    "salib>=1.5.2",
    "arviz>=0.23.4",
    "pymc>=5.25.1",
    "pytensor>=2.31.7",
    "ruff>=0.15.7",
    "diffopt>=1.5.0",
    "marimo>=0.18.1",
    "matplotlib>=3.10.7",
    "mpi4py>=4.1.1",
    "polars>=1.35.2",
    "pyarrow>=23.0.1",
    "pyrefly>=0.44.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]

[tool.uv]
constraint-dependencies = ["urllib3>=2.6.3"]
