[package]
name = "rma-kinetics"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rma_kinetics"
crate-type = ["cdylib", "lib"]

[dependencies]
differential-equations = { workspace = true }
thiserror = { workspace = true }
derive_builder = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rma-kinetics-derive = { workspace = true }
serde = { workspace = true, optional = true }
pyo3 = { workspace = true, optional = true }
numpy = { workspace = true, optional = true }
polars = { version = "0.52.0", optional = true }

[features]
py = ["dep:pyo3", "dep:numpy", "rma-kinetics-derive/py"]
serde = ["dep:serde"]
polars = ["dep:polars"]
